[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/To-Do/SRC/Task.gd" type="Script" id=1]
[ext_resource path="res://addons/To-Do/Icons/Remove.svg" type="Texture" id=2]
[ext_resource path="res://addons/To-Do/Icons/Info.svg" type="Texture" id=3]
[ext_resource path="res://addons/To-Do/Icons/ArrowDown.svg" type="Texture" id=4]
[ext_resource path="res://addons/To-Do/Icons/ArrowUp.svg" type="Texture" id=5]
[ext_resource path="res://addons/To-Do/Icons/Time.svg" type="Texture" id=6]
[ext_resource path="res://addons/To-Do/Icons/Stop.svg" type="Texture" id=7]
[ext_resource path="res://addons/To-Do/Icons/New.svg" type="Texture" id=8]
[ext_resource path="res://addons/To-Do/Icons/NonFavorite.svg" type="Texture" id=9]
[ext_resource path="res://addons/To-Do/Icons/Favorites.svg" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 28.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.12549, 0.145098, 0.192157, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Task" type="HBoxContainer"]
margin_right = 1075.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 29.0
margin_right = 855.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )

[node name="FavouriteButton" type="CheckButton" parent="LineEdit"]
unique_name_in_owner = true
anchor_bottom = 1.0
margin_right = 28.0
custom_icons/off = ExtResource( 9 )
custom_icons/on = ExtResource( 10 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
action_mode = 0
icon_align = 1

[node name="InfoButton" type="Button" parent="."]
margin_left = 860.0
margin_right = 890.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "View task info"
size_flags_stretch_ratio = 0.05
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="TaskNoteButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 895.0
margin_right = 925.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "Add new note linked to this task"
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="TimerStartButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 930.0
margin_right = 960.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "Start free focus timer for this task"
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="TimerStopButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 1051.0
margin_right = 1103.0
margin_bottom = 60.0
rect_min_size = Vector2( 52, 0 )
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="DeleteButton" type="Button" parent="."]
margin_left = 965.0
margin_right = 995.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "Delete task"
size_flags_stretch_ratio = 0.05
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[node name="Spacer" type="Control" parent="."]
margin_left = 1000.0
margin_right = 1005.0
margin_bottom = 60.0
rect_min_size = Vector2( 5, 0 )

[node name="MoveDownButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 1010.0
margin_right = 1040.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "Move task down"
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="MoveUpButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 1045.0
margin_right = 1075.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "Move task up"
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="LineEdit/FavouriteButton" to="." method="_on_FavouriteButton_toggled"]
[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="TaskNoteButton" to="." method="_on_TaskNoteButton_pressed"]
[connection signal="pressed" from="TimerStartButton" to="." method="_on_TimerStartButton_pressed"]
[connection signal="pressed" from="TimerStopButton" to="." method="_on_TimerStopButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="MoveDownButton" to="." method="_on_MoveDownButton_pressed"]
[connection signal="pressed" from="MoveUpButton" to="." method="_on_MoveUpButton_pressed"]
